--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
+  google_mlkit_text_recognition: ^0.10.0
 
 dev_dependencies:
   flutter_test:
