--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,22 +27,8 @@ dependencies:
   path: ^1.8.3
   path_provider: ^2.1.1
 
-  # Machine Learning
-  google_mlkit_barcode_scanning       : ^0.9.0
-  google_mlkit_digital_ink_recognition: ^0.9.0
-  google_mlkit_face_detection         : ^0.8.0
-  google_mlkit_face_mesh_detection    : ^0.0.1
-  google_mlkit_image_labeling         : ^0.9.0
-  google_mlkit_object_detection       : ^0.10.0
-  google_mlkit_pose_detection         : ^0.9.0
-  google_mlkit_selfie_segmentation    : ^0.5.0
+  # Machine Learning Text Recognition
   google_mlkit_text_recognition       : ^0.10.0
-
-  google_mlkit_entity_extraction      : ^0.10.0
-  google_mlkit_language_id            : ^0.8.0
-  google_mlkit_translation            : ^0.8.0
-  google_mlkit_smart_reply            : ^0.8.0
-
 
 dev_dependencies:
   flutter_test:
